crates/haneul/tests/snapshots/shell_tests__summaries__summary_hardcoded_addr.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/summaries/summary_hardcoded_addr.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# Default output format is JSON
haneul move summary --path data/pkg_with_hardcoded_addr
ls -1 data/pkg_with_hardcoded_addr/package_summaries/
cat data/pkg_with_hardcoded_addr/package_summaries/summary_pkg/a.json
cat data/pkg_with_hardcoded_addr/package_summaries/summary_pkg/b.json
cat data/pkg_with_hardcoded_addr/package_summaries/summary_pkg/b.json
cat data/pkg_with_hardcoded_addr/package_summaries/address_mapping.json

----- results -----
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY Bridge
INCLUDING DEPENDENCY HaneulSystem
INCLUDING DEPENDENCY Haneul
INCLUDING DEPENDENCY MoveStdlib
BUILDING summaries

Summary generation successful. Summaries stored in 'package_summaries'
address_mapping.json
bridge
root_package_metadata.json
std
haneul
haneul_system
summary_pkg
{
  "id": {
    "address": "summary_pkg",
    "name": "a"
  },
  "doc": " This is a doc comment on a module",
  "immediate_dependencies": [
    {
      "address": "summary_pkg",
      "name": "b"
    }
  ],
  "attributes": [
    {
      "Parameterized": [
        "allow",
        [
          {
            "Name": "unused"
          }
        ]
      ]
    }
  ],
  "functions": {
    "f": {
      "source_index": 0,
      "index": 0,
      "doc": null,
      "attributes": [],
      "visibility": "Public",
      "entry": false,
      "type_parameters": [
        {
          "name": "Typename1",
          "constraints": []
        },
        {
          "name": "Typename2",
          "constraints": []
        }
      ],
      "parameters": [
        {
          "name": "_param_1",
          "type_": {
            "NamedTypeParameter": "Typename1"
          }
        },
        {
          "name": "_param_2",
          "type_": {
            "NamedTypeParameter": "Typename2"
          }
        }
      ],
      "return_": [
        {
          "NamedTypeParameter": "Typename1"
        }
      ]
    }
  },
  "structs": {
    "X": {
      "index": 0,
      "doc": " This is a doc comment on a struct",
      "attributes": [],
      "abilities": [],
      "type_parameters": [],
      "fields": {
        "positional_fields": false,
        "fields": {
          "x": {
            "index": 0,
            "doc": " This is a doc comment on a field",
            "type_": "u64"
          },
          "y": {
            "index": 1,
            "doc": null,
            "type_": {
              "Datatype": {
                "module": {
                  "address": "summary_pkg",
                  "name": "b"
                },
                "name": "X",
                "type_arguments": []
              }
            }
          }
        }
      }
    }
  },
  "enums": {}
}{
  "id": {
    "address": "summary_pkg",
    "name": "b"
  },
  "doc": " This is a doc comment on a module",
  "immediate_dependencies": [],
  "attributes": [
    {
      "Parameterized": [
        "allow",
        [
          {
            "Name": "unused"
          }
        ]
      ]
    }
  ],
  "functions": {
    "f": {
      "source_index": 0,
      "index": 0,
      "doc": null,
      "attributes": [],
      "visibility": "Public",
      "entry": false,
      "type_parameters": [
        {
          "name": "Typename1",
          "constraints": []
        },
        {
          "name": "Typename2",
          "constraints": []
        }
      ],
      "parameters": [
        {
          "name": "_param_1",
          "type_": {
            "NamedTypeParameter": "Typename1"
          }
        },
        {
          "name": "_param_2",
          "type_": {
            "NamedTypeParameter": "Typename2"
          }
        }
      ],
      "return_": [
        {
          "NamedTypeParameter": "Typename1"
        }
      ]
    }
  },
  "structs": {
    "X": {
      "index": 0,
      "doc": " This is a doc comment on a struct",
      "attributes": [],
      "abilities": [],
      "type_parameters": [],
      "fields": {
        "positional_fields": false,
        "fields": {
          "x": {
            "index": 0,
            "doc": " This is a doc comment on a field",
            "type_": "u64"
          }
        }
      }
    }
  },
  "enums": {}
}{
  "id": {
    "address": "summary_pkg",
    "name": "b"
  },
  "doc": " This is a doc comment on a module",
  "immediate_dependencies": [],
  "attributes": [
    {
      "Parameterized": [
        "allow",
        [
          {
            "Name": "unused"
          }
        ]
      ]
    }
  ],
  "functions": {
    "f": {
      "source_index": 0,
      "index": 0,
      "doc": null,
      "attributes": [],
      "visibility": "Public",
      "entry": false,
      "type_parameters": [
        {
          "name": "Typename1",
          "constraints": []
        },
        {
          "name": "Typename2",
          "constraints": []
        }
      ],
      "parameters": [
        {
          "name": "_param_1",
          "type_": {
            "NamedTypeParameter": "Typename1"
          }
        },
        {
          "name": "_param_2",
          "type_": {
            "NamedTypeParameter": "Typename2"
          }
        }
      ],
      "return_": [
        {
          "NamedTypeParameter": "Typename1"
        }
      ]
    }
  },
  "structs": {
    "X": {
      "index": 0,
      "doc": " This is a doc comment on a struct",
      "attributes": [],
      "abilities": [],
      "type_parameters": [],
      "fields": {
        "positional_fields": false,
        "fields": {
          "x": {
            "index": 0,
            "doc": " This is a doc comment on a field",
            "type_": "u64"
          }
        }
      }
    }
  },
  "enums": {}
}{
  "bridge": "0x000000000000000000000000000000000000000000000000000000000000000b",
  "std": "0x0000000000000000000000000000000000000000000000000000000000000001",
  "haneul": "0x0000000000000000000000000000000000000000000000000000000000000002",
  "haneul_system": "0x0000000000000000000000000000000000000000000000000000000000000003",
  "summary_pkg": "0x0000000000000000000000000000000000000000000000000000000000c0ffee"
}
----- stderr -----
